// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SelectArrow rendering renders expected elements 1`] = `
<ChevronDown
  className="SelectArrow TestClass"
/>
`;

exports[`SelectArrow rendering renders expected elements when open is set 1`] = `
<ChevronDown
  className="SelectArrow SelectArrow--open TestClass"
/>
`;
